Code changes for npm

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- Name of browser and necesary .css file -->
     <title>Cheesecake Order Form</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
 
     <!-- Specifies the title font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,46 +96,6 @@
     </ul>
 </body>
 
-<script>
-    // When the Order button is clicked, run this code
-    $("#orderButton").click(function(event) {
-        event.preventDefault();
-
-        // get data from each element
-        var quantity = $("#quantity").val();
-        var topping = $("input[name='toppings']:checked").val();
-        var notes = $("#message").val();
-
-        // if the textArea is empty, summary says "None"
-        if (notes == "") {
-            notes = "None";
-        }
-
-        // alert if the textArea includes "vegan"
-        if (notes.toLowerCase().includes("vegan")) {
-            alert("Warning: Cheesecakes contain dairy!");
-        }
-
-        // remove orderForm and replace with orderSummary
-        $("#orderForm").remove();
-        $("#orderSummary").append(`
-            <h2>Thank you! Your order has been placed.</h2>
-            <pre><p><b>     Quantity:</b> ${quantity}</p></pre>
-            <pre><p><b>     Topping:</b> ${topping}</p></pre>
-            <pre><p><b>     Notes:</b> ${notes}</p></pre>
-        `);
-    });
-
-    // functionality to select a month, adding even listeners for each
-    const monthItems = document.querySelectorAll(".month-options li");
-    const selectedMonth = document.getElementById("selected-month");
-
-    monthItems.forEach(month => {
-        month.addEventListener("click", () => {
-        selectedMonth.textContent = month.textContent;
-        });
-    });
-
-</script>
+<script src="javascripts/script.js"></script>
 
 </html>
