HW4 - JSON order

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
 
     <script
-        src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"/>
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
 </head>
 
@@ -89,11 +89,14 @@
         </span>
     </h2>
 
-    <ul>
-        <li>11 cherry</li>
-        <li>17 chocolate</li>
-        <li>31 plain</li>
-    </ul>
+    <!-- Default data, replaced with JSON for each month -->
+    <div id="monthOrderSummary">
+        <ul>
+            <li>11 cherry</li>
+            <li>17 chocolate</li>
+            <li>31 plain</li>
+        </ul>
+    </div>
 </body>
 
 <script src="javascripts/script.js"></script>
