--- a/app/public/index.html
+++ b/app/public/index.html
@@ -48,11 +48,11 @@
 
             <div class="radio-buttons">
                 <label><input type="radio" name="toppings"
-                    value="Plain" checked> Plain</label><br>
+                    value="1" checked> Plain</label><br>
                 <label><input type="radio" name="toppings"
-                    value="Cherry"> Cherry</label><br>
+                    value="4"> Cherry</label><br>
                 <label><input type="radio" name="toppings"
-                    value="Chocolate"> Chocolate</label>
+                    value="3"> Chocolate</label>
             </div>
         </div>
 
